--- a/views/doctor/doctor-view-consultation.ejs
+++ b/views/doctor/doctor-view-consultation.ejs
@@ -34,7 +34,7 @@
                     <h5>Patient Number:<%= consultation.patient_number %></h5>
                     <h5>Detail description of the issue</h5>
                     <p><%= consultation.visitation_notes %></p>
-                    <h5>Attachments:<%= consultation.attachments_path %> </h5>
+                    <h5>Attachments:<%= consultation.patient_attachments %> </h5>
                 </div>
                 <div class="card"></div>
             </div>
@@ -43,33 +43,33 @@
     <!--<div class="col">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Attachments:<%= consultation.attachments_path %> </h4>
+                <h4 class="card-title">Attachments:</h4>
                 <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
                 <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">View</a>
             </div>
         </div>
     </div> -->
-    <% }); %>
-    <div class="row">
+      <div class="row">
         <div class="col">
             <div role="tablist" id="accordion-1">
                 <div class="card">
                     <div class="card-header" role="tab">
-                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="#accordion-1 .item-2">Diagnosis</a></h5>
+                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="#accordion-1 .item-2">Diagnosis </a></h5>
                     </div>
                     <div class="collapse item-2" role="tabpanel" data-parent="#accordion-1">
                         <div class="card-body">
-                            <textarea name="" id="" cols="100" rows="3"></textarea>
+                            <textarea name="" id="" cols="100" rows="3"> <%= consultation.diagnosis  %> </textarea>
                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" role="tab">
-                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="#accordion-1 .item-3">Prescription</a></h5>
+                        <!-- <div class="card-body"> -->
+                            <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="#accordion-1 .item-3">Prescription</a>  </h5>
                     </div>
                     <div class="collapse item-3" role="tabpanel" data-parent="#accordion-1">
                         <div class="card-body">
-                            <textarea name="" id="" cols="100" rows="3"></textarea>
+                            <textarea name="" id="" cols="100" rows="3"> <%= consultation.prescription %></textarea>
                         </div>
                     </div>
                 </div>
@@ -82,8 +82,9 @@
                             <button class="btn btn-primary" type="button">Add Prognosis</button>
                         </div>
                     </div> -->
-                    <button class="btn btn-primary" type="button">SUBMIT</button>
+                     <a class="btn btn-primary" href="#modal1">Update Diagnosis Information</a>
                 </div>
+                <% }); %>
             </div>
         </div>
     </div>
